Fix spacing for index page text headlines

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -150,10 +150,12 @@ main
             text-align: center
             margin-bottom: 15px
             white-space: pre-wrap
-            margin-top: 0px
+            margin-top: -30px
             padding-top: 0px
             padding-left: 5px
             padding-right: 5px
+          pre:first-of-type
+            margin-top: 0px
       .date
         color: $tile-date-foreground-color
         font-style: italic
